--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
    </head>
 
    <body>
-
+      <div class="container">
+         <div class="box">
+            <div class="item" draggable="true"></div>
+         </div>
+         <div class="box">
+         </div>
+         <div class="box">
+         </div>
+      </div>
 
       <script src="js/script.js"></script>
    </body>
